# datamog

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  README.md  biome.json  index.ts  package.json  playwright.config.ts  tsconfig.base.json  tsconfig.json
.claude/: CLAUDE.md  bug-hunt.md
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  deploy-pages.yml  deploy-playground.yml  playground-e2e.yml  postgres.yml  python-magic.yml
doc/: comparison.md  spec.md
doc/case-studies/: 01-introduction.md  02-find-the-thief.md  03-catch-the-fire-starter.md  04-crown-the-rightful-heir.md  05-cross-the-river.md  06-find-the-shortest-path.md  07-analyze-a-program.md  08-prove-a-theorem.md  README.md
doc/design/: cli.md  imports-as-functors.md  imports.md  qualified-constructors.md
doc/embed-tutorials/: README.md  getting-started.md
doc/jupyter/: README.md  build-jupyter-tutorial.py  datamog-jupyter.ipynb
doc/pokedex/: README.md  pokedex.dl
doc/walkthrough/: 00-intro.md  01-facts-and-queries.md  02-rules-and-joins.md  03-disjunction.md  04-recursion.md  05-evaluation.md  06-arithmetic.md  07-safety.md  08-negation.md  09-aggregates.md  10-modelling.md  11-puzzles.md  12-program-analysis.md  13-graphs.md  14-json.md  (+8 more)
python/datamog-magic/: README.md  pyproject.toml
python/datamog-magic/src/datamog_magic/: __init__.py  magic.py  render.py  repl.py
python/datamog-magic/tests/: test_magic.py  test_render.py  test_repl.py
scripts/: build-spec-html.mjs  build-tutorial-html.mjs  doc-style.mjs  ensure-rollup-native.mjs
(+367 files in other folders)
