[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "datamog-magic"
version = "0.1.0"
description = "IPython cell magic for running Datamog programs from notebooks"
readme = "README.md"
license = "MIT"
authors = [{ name = "Max Schaefer" }]
requires-python = ">=3.10"
keywords = ["datalog", "datamog", "jupyter", "ipython"]
classifiers = [
    "Framework :: IPython",
    "Framework :: Jupyter",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "ipython>=8.0",
]

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
test = [
    "pytest>=7",
    "pandas>=1.5",
]

[project.urls]
Homepage = "https://github.com/max-schaefer/datamog"
Issues = "https://github.com/max-schaefer/datamog/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/datamog_magic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
